[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ["improvelib*"]
namespaces = false

[project]
name = 'improvelib'
version = '0.1'
authors = [
  { name='Alex Partin', email='apartin@anl.gov' },
]
description = 'Open-source package for model standardization and comparison in Python'
readme = 'README_PyPi.md'
requires-python = '>=3.6'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Libraries',
]

dependencies = [
  "pandas",
  "requests",
  "tqdm",
  "typing_extensions",
  "pyyaml",
  "scikit-learn"
]

[project.urls]
Homepage = 'https://github.com/JDACS4C-IMPROVE/IMPROVE'
Issues = 'https://github.com/JDACS4C-IMPROVE/IMPROVE/issues'
Documentation = 'https://jdacs4c-improve.github.io/docs/'
